[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/craft_holo_main.tres" type="Theme" id=1]
[ext_resource path="res://scripts/cockpit/engine_display.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Label

func _ready():
	set_process(true)
	
func _process(_delta: float) -> void:
	self.text = 'FPS: ' + str(Engine.get_frames_per_second())
"

[node name="EngineCkpitDisplay" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="StateLabels" type="VBoxContainer" parent="."]
margin_left = 163.0
margin_top = 56.0
margin_right = 903.0
margin_bottom = 544.0
custom_constants/separation = 10

[node name="FPS" type="Label" parent="StateLabels"]
margin_right = 740.0
margin_bottom = 33.0
text = "FPS: 60"
script = SubResource( 1 )

[node name="LinearVelocity" type="RichTextLabel" parent="StateLabels"]
margin_top = 43.0
margin_right = 740.0
margin_bottom = 98.0
rect_min_size = Vector2( 740, 55 )
bbcode_enabled = true
bbcode_text = "[color=aqua]SSpd: 000.000, 000.000, 000.000 m/s[/color]"
text = "SSpd: 000.000, 000.000, 000.000 m/s"

[node name="AngularVelocity" type="RichTextLabel" parent="StateLabels"]
margin_top = 108.0
margin_right = 740.0
margin_bottom = 163.0
rect_min_size = Vector2( 740, 55 )
bbcode_enabled = true
bbcode_text = "[color=aqua]SSpd: 000.000, 000.000, 000.000 m/s[/color]"
text = "SSpd: 000.000, 000.000, 000.000 m/s"

[node name="SetSpeed" type="RichTextLabel" parent="StateLabels"]
margin_top = 173.0
margin_right = 740.0
margin_bottom = 228.0
rect_min_size = Vector2( 740, 55 )
bbcode_enabled = true
bbcode_text = "[color=aqua]SSpd: 000.000, 000.000, 000.000 m/s[/color]"
text = "SSpd: 000.000, 000.000, 000.000 m/s"

[node name="LinearInput" type="RichTextLabel" parent="StateLabels"]
margin_top = 238.0
margin_right = 740.0
margin_bottom = 293.0
rect_min_size = Vector2( 740, 55 )
bbcode_enabled = true
bbcode_text = "[color=aqua]SSpd: 000.000, 000.000, 000.000 m/s[/color]"
text = "SSpd: 000.000, 000.000, 000.000 m/s"

[node name="AngularInput" type="RichTextLabel" parent="StateLabels"]
margin_top = 303.0
margin_right = 740.0
margin_bottom = 358.0
rect_min_size = Vector2( 740, 55 )
bbcode_enabled = true
bbcode_text = "[color=aqua]SSpd: 000.000, 000.000, 000.000 m/s[/color]"
text = "SSpd: 000.000, 000.000, 000.000 m/s"

[node name="LinearFlame" type="RichTextLabel" parent="StateLabels"]
margin_top = 368.0
margin_right = 740.0
margin_bottom = 423.0
rect_min_size = Vector2( 740, 55 )
bbcode_enabled = true
bbcode_text = "[color=aqua]SSpd: 000.000, 000.000, 000.000 m/s[/color]"
text = "SSpd: 000.000, 000.000, 000.000 m/s"

[node name="AngularFlame" type="RichTextLabel" parent="StateLabels"]
margin_top = 433.0
margin_right = 740.0
margin_bottom = 488.0
rect_min_size = Vector2( 740, 55 )
bbcode_enabled = true
bbcode_text = "[color=aqua]SSpd: 000.000, 000.000, 000.000 m/s[/color]"
text = "SSpd: 000.000, 000.000, 000.000 m/s"
